# cpp_many_tasks_2

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
balancer/: CMakeLists.txt  balancer.cpp  balancer.h  readme.md  test.cpp
buffered-channel/: CMakeLists.txt  buffered_channel.h  readme.md  run.cpp  test.cpp
clang-fun/: CMakeLists.txt  check_names.h  matchers_rewriter.cpp  readme.md
clang-fun/checker/: CMakeLists.txt  check_names.cpp  naming_rules_violation.cpp  naming_rules_violation.h  string_utils.cpp  string_utils.h
clang-fun/tests/: CMakeLists.txt  common.cpp  common.h  test_checker.cpp  test_dict.cpp  test_no_dict.cpp
clang-fun/tests/dict/: bit_field.cpp  bit_field.h  expected.txt  set.cpp  set.h  some.cpp  test_file.cpp  test_file.h
clang-fun/tests/no-dict/: expected.txt  fun.cpp  fun.h  lib.cpp  lib.h
compile-eval/: CMakeLists.txt  another_pow.h  determinant.h  hash.h  next_prime.h  pow.h  readme.md  sqrt.h  test_constexpr.cpp  test_constexpr_simple.cpp  test_templates.cpp
concepts/: concepts.h  readme.md  test.cpp
constexpr-map/: constexpr_map.h  readme.md  sort.h  test.cpp
coroutine/: CMakeLists.txt  coroutine.h  readme.md  test.cpp
docs/: SETUP.md  cactus.md  network-intro.md
docs/lectures/: pwn.md  rpc.md
docs/lectures/02-condition-variables/: README.md  queue.cpp
docs/lectures/03-memory-model/: lecture.md
executor/: CMakeLists.txt  common.h  readme.md  run.cpp  test_executor.cpp  test_future.cpp
executor/executor/: executor.cpp  executor.h
fanout/: CMakeLists.txt  fanout.cpp  fanout.h  flag.txt  main.cpp  readme.md  test.cpp
fast-queue/: CMakeLists.txt  mpmc.h  readme.md
futex/: CMakeLists.txt  mutex.h  readme.md
hash-table/: CMakeLists.txt  commons.h  concurrent_hash_map.h  readme.md  run.cpp  test.cpp
hazard-ptr/: CMakeLists.txt  hazard_ptr.cpp  hazard_ptr.h  readme.md  run.cpp  test.cpp
is-prime/: CMakeLists.txt  is_prime.cpp  is_prime.h  readme.md  run.cpp  test.cpp
jpeg-decoder/: CMakeLists.txt  decoder.h  image.h  readme.md
jpeg-decoder/decoder/: decoder.cpp
jpeg-decoder/tests/: jpg.h  png.h  test_baseline.cpp  test_commons.cpp  test_commons.h  test_progressive.cpp
lock-free-stack/: CMakeLists.txt  readme.md  run.cpp  stack.h  test.cpp
matrix-2.0/: matrix.h  readme.md  test.cpp
matrix-3.0/: CMakeLists.txt  expression.h  interpreter.h  matrix.h  readme.md  test.cpp  tokenizer.h
mpsc-queue/: CMakeLists.txt  mpsc_queue.h  readme.md  run.cpp  test.cpp
portknock/: CMakeLists.txt  flag.txt  main.cpp  portknock.cpp  portknock.h  readme.md  test.cpp
portscan/: CMakeLists.txt  flag.txt  main.cpp  portscan.cpp  portscan.h  readme.md  test.cpp
range-sum/: CMakeLists.txt  range_sum.cpp  range_sum.h  readme.md  run.cpp  test.cpp
ranges/: CMakeLists.txt  get.h  readme.md  stride.h  take.h  test.cpp
redis/: CMakeLists.txt  error.h  main.cpp  readme.md  resp_types.h
redis/redis-client/: CMakeLists.txt  client.cpp  client.h  test.cpp
redis/redis-server/: CMakeLists.txt  server.cpp  server.h  simple_storage.cpp  simple_storage.h  storage.h  test.cpp
redis/resp-reader/: CMakeLists.txt  resp_reader.cpp  resp_reader.h  test.cpp
redis/resp-writer/: CMakeLists.txt  resp_writer.cpp  resp_writer.h  test.cpp
reduce/: CMakeLists.txt  readme.md  reduce.h  run.cpp  test.cpp
rw-counter/: CMakeLists.txt  readme.md  run.cpp  rw_counter.h  test.cpp
rw-lock/: CMakeLists.txt  readme.md  rw_lock.h  test.cpp
rw-spinlock/: CMakeLists.txt  readme.md  run.cpp  rw_spinlock.h  test.cpp
semaphore/: CMakeLists.txt  readme.md  semaphore.h
sfinae/: CMakeLists.txt  advance.h  clever_set.h  readme.md  test_advance.cpp  test_set.cpp
socks4/: CMakeLists.txt  flag.txt  main.cpp  readme.md  socks4.cpp  socks4.h  test.cpp
socksd/: CMakeLists.txt  readme.md  socksd.cpp  socksd.h  test.cpp
spinlock/: CMakeLists.txt  readme.md  spinlock.h
subset-sum/: CMakeLists.txt  commons.cpp  commons.h  find_subsets.cpp  readme.md  run.cpp  test.cpp
sync-map/: CMakeLists.txt  readme.md  run.cpp  sync_map.h  test.cpp
timerqueue/: CMakeLists.txt  readme.md  test.cpp  timerqueue.h
tools/: tsan-decoder  tsan-decoder.md
tools/cactus/: CMakeLists.txt  cactus.h  test.h
tools/cactus/core/: debug.cpp  debug.h  exceptions.h  fiber.cpp  fiber.h  fiber_death_test.cpp  group.cpp  group.h  group_test.cpp  guard.h  scheduler.cpp  scheduler.h  scheduler_benchmark.cpp  scheduler_test.cpp  timer.cpp  timer.h
tools/cactus/examples/: CMakeLists.txt
tools/cactus/examples/daytime/: CMakeLists.txt  daytime.cpp
tools/cactus/internal/: context.S  context.cpp  context.h  context_benchmark.cpp  context_test.cpp  intrusive_list.h  intrusive_list_test.cpp  syscall.h  wait_queue.cpp  wait_queue.h  wait_queue_test.cpp
tools/cactus/io/: io_test.cpp  reader.cpp  reader.h  view.h  view_test.cpp  writer.cpp  writer.h
tools/cactus/net/: address.h  net.cpp  net.h  net_ping_pong_benchmark.cpp  net_server_benchmark.cpp  net_test.cpp  poller.cpp  poller.h
tools/cactus/rpc/: CMakeLists.txt  readme.md  rpc.h  rpc.proto  rpc_test.proto  rpc_test_gen_rpc.proto  rpc_test_transport.proto  test.cpp
tools/cactus/rpc/gen-rpc/: CMakeLists.txt  main.cpp  readme.md  rpc_generator.cpp  rpc_generator.h  test.cpp
tools/cactus/rpc/transport/: readme.md  rpc.cpp  test.cpp
tools/cactus/sync/: mutex.cpp  mutex.h  mutex_test.cpp
tools/cmake/: BuildFlags.cmake  Protobuf.cmake  TestSolution.cmake
tools/commons/: runner.h  test_channel.h  util.h
unbuffered-channel/: CMakeLists.txt  readme.md  run.cpp  test.cpp  unbuffered_channel.h
